--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,30 @@
 /*----UNIVERSAL STYLING----*/
-:root {
-	--main-white: #FFFFFF;
-	--main-black: #040404;
-	--main-pink: #FE2858;
-	--main-pink2: #DE8C9D;
-	--main-blue: #2AF0EA;
-	--main-blue2: #397684;
-	--main-gray: #303841;
+:root,
+	:root.light {
+		--main-white: #FFFFFF;
+		--main-black: #040404;
+		--main-pink: #FE2858;
+		--main-pink2: #DE8C9D;
+		--main-blue: #2AF0EA;
+		--main-blue2: #397684;
+		--main-gray: #303841;
+		--main-gray2: #131313;
+	}
+	:root.dark {
+		--main-white: #000000;
+		--main-black: #fbfbfb;
+		--main-pink: #01d7a7;
+		--main-pink2: #217362;
+		--main-blue: #d50f15;
+		--main-blue2: #c6897b;
+		--main-gray: #cfc7be;
+		--main-gray2: #ececec;
+	}
+
+.dark-mode {
+	color: black !important;
 }
+
 * {
 	margin: 0;
 	padding: 0;
@@ -132,7 +149,7 @@ main {
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
-	background: linear-gradient(60deg, var(--main-gray) 0%, rgb(19, 19, 19) 100%);
+	background: linear-gradient(60deg, var(--main-gray) 0%, var(--main-gray2) 100%);
 	height: 100vh;
 	width: 100%;
 }
@@ -240,6 +257,62 @@ main {
 	position: relative; 
 	top: 40px; 
 	text-align: center;
+}
+
+input[type=checkbox] {
+	height: 0;
+	width: 0;
+	visibility: hidden;
+}
+
+label {
+	cursor: pointer;
+	width: 30px;
+	height: 15px;
+	background: grey;
+	display: block;
+	border-radius: 100px;
+	position: relative;
+}
+
+label:after {
+	content: '';
+	position: absolute;
+	top: 1px;
+	left: 1px;
+	width: 13px;
+	height: 13px;
+	background: #f2eee3;
+	border-radius: 90px;
+	transition: 0.3s;
+}
+
+input:checked + label {
+	background: var(--main-blue2);
+}
+
+input:checked + label:after {
+	left: calc(100% - 1px);
+	transform: translateX(-100%);
+}
+
+label:active:after {
+	width: 28px;
+}
+
+.view-mode-button {
+	position: relative;
+	top: 30%;
+	display: flex;
+	align-items: center;
+}
+
+.view-mode-label {
+	margin-left: 0.5em;
+	font-weight: 100;
+	font-size: 1em;
+	letter-spacing: 4px;
+	color: var(--main-white);
 }
 
 @media only screen and (max-width: 500px) {
